# vj-event-sync

./: .gitignore  Concept.md  README.md  index.html  package-lock.json  package.json  vite.config.js  webpack.config.js
.cursor/rules/: concept.mdc
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: file_explorer.rs  library.rs  logo_library.rs  main.rs
src/client/: App.vue  index.html  main.js  router.js  styles.css
src/client/components/: CycleManager.vue  Events.vue  FileExplorer.vue  Login.vue  LogoGallery.vue  LogoLibrary.vue  Logos.vue  Messaging.vue  NDI.vue  NowPlaying.vue  OSC.vue  Settings.vue  ShareUploadLink.vue  TestComponent.vue  TitleBar.vue
src/client/services/: ModuleManager.js  moduleRegistry.js  vjTools.js
src/client/stores/: modules.js  settings.js
src/client/styles/: dark-mode.css  variables.css
src/electron/: main.js
src/server/: index.js
src/server/routes/: events.js  logos.js  messages.js  timers.js
src/services/: eventSync.js  messaging.js  ndi.js  osc.js  video.js  vjTools.js
src/wire/: index.js  manifest.json
