[package]
name = "vj-event-sync"
version = "1.0.0"
description = "VJ Event Sync & Logo Management Tool for Resolume"
authors = ["VJ Event Sync Team"]
edition = "2021"
rust-version = "1.60"

[build-dependencies]
tauri-build = { version = "1.5.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.5.4", features = [ "shell-all", "window-all", "fs-all", "path-all", "http-all", "notification-all", "process-command-api"] }

[features]
custom-protocol = ["tauri/custom-protocol"] 
