[package]
name = "vj-event-sync-backend"
version = "1.0.0"
description = "VJ Event Sync & Logo Management Tool for Resolume"
authors = ["VJ Event Sync Team"]
edition = "2021"
rust-version = "1.60"

[build-dependencies]
tauri-build = { version = "1.5.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.5.4", features = [ "window-all", "fs-all", "shell-open"] }
rusqlite = { version = "0.30.0", features = ["bundled"] }
uuid = { version = "1.7.0", features = ["v4"] }

[features]
custom-protocol = ["tauri/custom-protocol"] 
